--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ dependencies {
         transitive = true
     }
     implementation('com.google.guava:guava:11.0.2')
+    implementation('io.vavr:vavr:0.10.4')
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
