--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'java-library'
 }
 
 repositories {
@@ -7,7 +7,7 @@ repositories {
 }
 
 dependencies {
-    implementation project(':core')
+    api project(':core')
     implementation('org.eclipse.rdf4j:rdf4j-runtime:3.7.4@pom') {
         transitive = true
     }
