--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     }
     implementation('com.google.guava:guava:11.0.2')
     implementation('io.vavr:vavr:0.10.4')
+    testImplementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.23.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
