--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,11 @@ plugins {
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
-    api project(':core')
+    implementation 'com.github.danaivach:hmas-core:refactor~jitpack-SNAPSHOT'
     implementation('org.eclipse.rdf4j:rdf4j-runtime:3.7.4@pom') {
         transitive = true
     }
