--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.github.danaivach:hmas-core:refactor~jitpack-SNAPSHOT'
+    implementation 'com.github.danaivach:hmas-core:main-SNAPSHOT'
     implementation('org.eclipse.rdf4j:rdf4j-runtime:3.7.4@pom') {
         transitive = true
     }
