--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,11 @@
 plugins {
     id 'java-library'
+    id 'maven-publish'
+}
+
+allprojects {
+    version = '1.0-SNAPSHOT'
+    group = 'ch.unisg.ics.interactions.hmas'
 }
 
 repositories {
@@ -20,4 +26,15 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId project.group
+            artifactId project.name
+	        version project.version
+	        from components.java
+	    }
+    }
 }
