--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ dependencies {
         transitive = true
     }
     implementation('com.google.guava:guava:11.0.2')
+    implementation('org.apache.httpcomponents.client5:httpclient5:5.3.1')
+    implementation('org.apache.httpcomponents.client5:httpclient5-fluent:5.3.1')
     testImplementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.23.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
