--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,23 @@ repositories {
 
 dependencies {
     implementation 'com.github.danaivach:hmas-core:main-SNAPSHOT'
-    implementation('org.eclipse.rdf4j:rdf4j-runtime:3.7.4@pom') {
-        transitive = true
-    }
-    implementation('com.google.guava:guava:11.0.2')
+    // https://mvnrepository.com/artifact/org.eclipse.rdf4j/rdf4j-model
+    implementation group: 'org.eclipse.rdf4j', name: 'rdf4j-model', version: '5.0.1'
+    // https://mvnrepository.com/artifact/org.eclipse.rdf4j/rdf4j-rio-api
+    implementation group: 'org.eclipse.rdf4j', name: 'rdf4j-rio-api', version: '5.0.1'
+    // https://mvnrepository.com/artifact/org.eclipse.rdf4j/rdf4j-rio-turtle
+    implementation group: 'org.eclipse.rdf4j', name: 'rdf4j-rio-turtle', version: '5.0.1'
+    // https://mvnrepository.com/artifact/org.eclipse.rdf4j/rdf4j-repository-sail
+    implementation group: 'org.eclipse.rdf4j', name: 'rdf4j-repository-sail', version: '5.0.1'
+    // https://mvnrepository.com/artifact/org.eclipse.rdf4j/rdf4j-sail-memory
+    implementation group: 'org.eclipse.rdf4j', name: 'rdf4j-sail-memory', version: '5.0.1'
+    // https://mvnrepository.com/artifact/org.eclipse.rdf4j/rdf4j-shacl
+    implementation group: 'org.eclipse.rdf4j', name: 'rdf4j-shacl', version: '5.0.1'
+
+
+    // https://mvnrepository.com/artifact/com.google.guava/guava
+    implementation group: 'com.google.guava', name: 'guava', version: '33.2.1-jre'
+
     testImplementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.23.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
